--- a/index.html
+++ b/index.html
@@ -134,46 +134,56 @@
     <div class="footer-right-group">
         <div class="footer-right">
             <div class="footer-links-1">
-                <h4>회사</h4>
-                <ul>
-                    <li><a href="#">회사 소개</a></li>
-                    <li><a href="#">당근페이</a></li>
-                    <li><a href="#">팀문화</a></li>
-                    <li><a href="#">서비스 소개</a></li>
-                    <li><a href="#">블로그</a></li>
-                    <li><a href="#">채용</a></li>
-                </ul>
-                <h4>탐색</h4>
-                <ul>
-                    <li><a href="#">중고거래</a></li>
-                    <li><a href="#">부동산</a></li>
-                    <li><a href="#">중고차</a></li>
-                    <li><a href="#">알바</a></li>
-                    <li><a href="#">동네업체</a></li>
-                    <li><a href="#">동네생활</a></li>
-                    <li><a href="#">모임</a></li>
-                    <li><a href="#">채팅하기</a></li>
-                    <li><a href="#">이웃</a></li>
-                </ul>
-                <h4>비즈니스</h4>
-                <ul>
-                    <li><a href="#">당근 비즈니스</a></li>
-                    <li><a href="#">제휴 문의</a></li>
-                    <li><a href="#">광고 문의</a></li>
-                </ul>
-                <h4>Karrot</h4>
-                <ul>
-                    <li><a href="#">Canada</a></li>
-                    <li><a href="#">United States</a></li>
-                    <li><a href="#">United Kingdom</a></li>
-                    <li><a href="#">Japan</a></li>
-                </ul>
-                <h4>문의</h4>
-                <ul>
-                    <li><a href="#">IR</a></li>
-                    <li><a href="#">PR</a></li>
-                    <li><a href="#">고객센터</a></li>
-                </ul>
+                <div class="footer-section">
+                    <h4>회사</h4>
+                    <ul>
+                        <li><a href="#">회사 소개</a></li>
+                        <li><a href="#">당근페이</a></li>
+                        <li><a href="#">팀문화</a></li>
+                        <li><a href="#">서비스 소개</a></li>
+                        <li><a href="#">블로그</a></li>
+                        <li><a href="#">채용</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>탐색</h4>
+                    <ul>
+                        <li><a href="#">중고거래</a></li>
+                        <li><a href="#">부동산</a></li>
+                        <li><a href="#">중고차</a></li>
+                        <li><a href="#">알바</a></li>
+                        <li><a href="#">동네업체</a></li>
+                        <li><a href="#">동네생활</a></li>
+                        <li><a href="#">모임</a></li>
+                        <li><a href="#">채팅하기</a></li>
+                        <li><a href="#">이웃</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>비즈니스</h4>
+                    <ul>
+                        <li><a href="#">당근 비즈니스</a></li>
+                        <li><a href="#">제휴 문의</a></li>
+                        <li><a href="#">광고 문의</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Karrot</h4>
+                    <ul>
+                        <li><a href="#">Canada</a></li>
+                        <li><a href="#">United States</a></li>
+                        <li><a href="#">United Kingdom</a></li>
+                        <li><a href="#">Japan</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>문의</h4>
+                    <ul>
+                        <li><a href="#">IR</a></li>
+                        <li><a href="#">PR</a></li>
+                        <li><a href="#">고객센터</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
