--- a/index.html
+++ b/index.html
@@ -36,12 +36,6 @@
             </button>
         </div>
         <div class="header-bottom">
-            <div class="search-container">
-                <section class="location">
-                    <a href="#">유성구</a>
-                    <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/location_icon.png?raw=true" alt-="location-icon">
-                </section>
-            </div>
             <section class="search-others">
                 <div class="search-bar">
                     <div class="search-bar-button">
@@ -49,9 +43,6 @@
                     </div>
                     <div class="search-bar-input">
                         <input type="text" placeholder="검색어를 입력해주세요">
-                    </div>
-                    <div class="search-icon">
-                        <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/search_icon.png?raw=true" alt="search icon">
                     </div>
                 </div>
                 <div class="popular-searches">
@@ -192,16 +183,17 @@
             <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/karrot_market_logo1.png?raw=true" alt="footer-logo">
         </div>
         <div class="footer-social">
-            <div class="social-facebook">
-                <a href="https://www.facebook.com/daangn/" img="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/Facebook_icon.png?raw=true" alt="facebook-logo"></a>
-            </div>
-            <div class="social-instagram">
-                <a href="https://www.instagram.com/daangnmarket/"><img="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/Instagram_icon.png?raw=true" alt="instagram-logo"></a>
-            </div>
-            <div class="social-youtube">
-                <a href="https://www.youtube.com/@karrot-localbuyingsellinga1250/featured"><img="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/YouTube_Icon.png?raw=true" alt="youtube-logo"></a>
-            </div>
+            <a href="https://www.facebook.com/daangn/">
+                <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/Facebook_icon.png?raw=true" alt="facebook-logo">
+            </a>
+            <a href="https://www.instagram.com/daangnmarket/">
+                <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/Instagram_icon.png?raw=true" alt="instagram-logo">
+            </a>
+            <a href="https://www.youtube.com/@karrot-localbuyingsellinga1250/featured">
+                <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/YouTube_Icon.png?raw=true" alt="youtube-logo">
+            </a>
         </div>
+    </div>
     <div class="footer-bottom">
         <p>(주) 당근마켓</p><br>
         <p>대표 김용현, 황도연 | 사업자번호 375-87-00088<br></p>
