--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
                 <a href="#">중고거래</a>
                 <a href="#">부동산</a>
                 <a href="#">중고차</a>
-                <a href="#" class="with-submenu">알바</a>
-                <div class="sub-menu">
-                    <a href="#">알바 검색</a>
-                    <a href="#">당근알바 소개</a>
-                    <a href="#">기업형 서비스</a>
-                    <a href="#">신뢰와 안전</a>
-                </div>
+                <a href="#" class="with-submenu">알바
+                    <div class="sub-menu">
+                       <a href="#">알바 검색</a>
+                       <a href="#">당근알바 소개</a>
+                       <a href="#">기업형 서비스</a>
+                       <a href="#">신뢰와 안전</a>
+                    </div>
+                </a>
                 <a href="#">동네업체</a>
                 <a href="#">동네생활</a>
                 <a href="#">모임</a>
@@ -108,17 +109,6 @@
             <div class="app-button">
                 <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/49380c1c7e70e49f0f93baf0f790925eefc69082-120x40.svg" alt="apple"></a>
                 <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/0d8f72b8e4cdb98af115a7c1f04c4abf19f5c419-180x53.svg" alt="google"></a>
-            </div>
-            <div class="app-content">
-                <div class="app-image-1">
-                    <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/81e60d2c87dcdd2cb7e9cb4d612a3eee41c65a8c-507x780.png" alt="app-image-1">
-                </div>
-                <div class="app-image-2">
-                    <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/976774c022ecc54fe4f30101b0f02067ee330b8b-507x1080.png" alt="app-image-2">
-                </div>
-                <div class="app-image-3">
-                    <img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/7e3238a9040150bf3b4e5cd41dae1482a6353412-798x298.png" alt="app-image-3">
-                </div>
             </div>
         </section>
     </div>
