--- a/index.html
+++ b/index.html
@@ -112,7 +112,24 @@
             </div>
         </section>
     </div>
-    <div class="footer-right-group">
+    <div class="footer-group">
+        <div class="footer-left">
+            <div class="footer-logo">
+                    <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/karrot_market_logo1.png?raw=true" alt="footer-logo">
+            </div>
+            <div class="footer-social">
+                <a href="https://www.facebook.com/daangn/">
+                    <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/Facebook_icon.png?raw=true" alt="facebook-logo">
+                </a>
+                <a href="https://www.instagram.com/daangnmarket/">
+                    <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/Instagram_icon.png?raw=true" alt="instagram-logo">
+                </a>
+                <a href="https://www.youtube.com/@karrot-localbuyingsellinga1250/featured">
+                    <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/YouTube_Icon.png?raw=true" alt="youtube-logo">
+                </a>
+                </div>
+            </div>
+        </div>
         <div class="footer-right">
             <div class="footer-links-1">
                 <div class="footer-section">
@@ -166,23 +183,7 @@
                     </ul>
                 </div>
             </div>
-        </div>
-        <div class="footer-left">
-            <div class="footer-logo">
-                <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/karrot_market_logo1.png?raw=true" alt="footer-logo">
-            </div>
-            <div class="footer-social">
-                <a href="https://www.facebook.com/daangn/">
-                    <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/Facebook_icon.png?raw=true" alt="facebook-logo">
-                </a>
-                <a href="https://www.instagram.com/daangnmarket/">
-                    <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/Instagram_icon.png?raw=true" alt="instagram-logo">
-                </a>
-                <a href="https://www.youtube.com/@karrot-localbuyingsellinga1250/featured">
-                    <img src="https://github.com/yoonseo0832/Carrot_Market_Clone_Coding/blob/main/YouTube_Icon.png?raw=true" alt="youtube-logo">
-                </a>
-            </div>
-        </div>
+        </div>    
     </div>
     <div class="footer-bottom">
         <p>(주) 당근마켓</p><br>
