--- a/index.html
+++ b/index.html
@@ -103,12 +103,14 @@
                 </div>
             </div>
         </section>
-        <section class="app-text">
-            <h2>당근에서 가까운 이웃과 함께해요.</h2>
-            <h1>지금 바로 다운로드하기</h1>
-            <div class="app-button">
-                <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/49380c1c7e70e49f0f93baf0f790925eefc69082-120x40.svg" alt="apple"></a>
-                <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/0d8f72b8e4cdb98af115a7c1f04c4abf19f5c419-180x53.svg" alt="google"></a>
+        <section class="app-adver">
+            <div class="app-text">
+                <h2>당근에서 가까운 이웃과 함께해요.</h2>
+                <h1>지금 바로 다운로드하기</h1>
+                <div class="app-button">
+                    <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/49380c1c7e70e49f0f93baf0f790925eefc69082-120x40.svg" alt="apple"></a>
+                    <a href="#"><img src="https://karrotmarket-com-sanity-cdn.krrt.io/production/0d8f72b8e4cdb98af115a7c1f04c4abf19f5c419-180x53.svg" alt="google"></a>
+                </div>
             </div>
             <div class="app-content">
                 <div class="app-image-1">
