--- a/index.html
+++ b/index.html
@@ -20,14 +20,7 @@
                 <a href="#">중고거래</a>
                 <a href="#">부동산</a>
                 <a href="#">중고차</a>
-                <a href="#" class="with-submenu">알바
-                    <div class="sub-menu">
-                       <a href="#">알바 검색</a>
-                       <a href="#">당근알바 소개</a>
-                       <a href="#">기업형 서비스</a>
-                       <a href="#">신뢰와 안전</a>
-                    </div>
-                </a>
+                <a href="#">알바</a>
                 <a href="#">동네업체</a>
                 <a href="#">동네생활</a>
                 <a href="#">모임</a>
